2003-11-10  Tobias Burnus <tobias.burnus@physik.fu-berlin.de>

	* ar.c (print_contents): Remove "member" from verbose output in
	order to conform to POSIX specification.

2003-11-10  Alan Modra  <amodra@bigpond.net.au>

	* README: Expand bug reporting information.

2003-11-07  Jonathan R. Grant  <jg-binutils@jguk.org>

	* bucomm,c (get_file_size): New function.  Returns the size of a
	  file.
	* bucomm.h: Add prototype for get_file_size.
	* addr2line.c (process_file): Use new function.
	* ar.c (main, ranlib_only, ranlib_touch): Likewise.
	* nm.c (display_file): Likewise.
	* objcopy.c (add_specific_symbols, copy_file, strip_main,
	  copy_main): Likewise.
	* objdump.c (display_file): Likewise.
	* size.c (display_file): Likewise.
	* strings.c (strings_file): Likewise.
	* readelf.c (process_file): Use similar code to get_file_size.

2003-11-06  Bruno Rohee  <bruno@rohee.com>

	* ieee.c: Fix "the the" typo.
	* stabs.c: Likewise.

2003-10-30  Marshall T. Vandegrift  <llasram@wuli.nu>

	* readelf.c (dump_section): Do not dump the contents of SHT_NOBITS
	sections - they have no file space assigned to their contents.

2003-10-28  Segher Boessenkool  <segher@kernel.crashing.org>

	* readelf.c (dump_section): Don't display DEL characters.

2003-10-27  Kazu Hirata  <kazu@cs.umass.edu>

	* ChangeLog: Fix typos.
	* ChangeLog-9197: Likewise.
	* ChangeLog-9899: Likewise.
	* NEWS: Likewise.
	* ar.c: Fix comment typos.
	* arsup.c: Likewise.
	* coffgrok.c: Likewise.
	* debug.c: Likewise.
	* debug.h: Likewise.
	* dlltool.c: Likewise.
	* ieee.c: Likewise.
	* nm.c: Likewise.
	* objdump.c: Likewise.
	* prdbg.c: Likewise.
	* readelf.c: Likewise.
	* resrc.c: Likewise.
	* sysinfo.y: Likewise.
	* windres.c: Likewise.

2003-10-27  Nick Clifton  <nickc@redhat.com>

	* objcopy.c (copy_section): Do not complain when a target does not
	support relocations.
	(mark_symbols_used_in_relocations): Likewise.

2003-10-14  Anil Paranjpe  <anilp1@KPITCummins.com>
